Added MerchantsSearch function
